# linux-corecycler

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  SECURITY.md  _typos.toml  flake.nix  pyproject.toml
.github/: update.json
.github/workflows/: update-flake.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-core-engine-fixes/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md
.planning/phases/02-process-thread-lifecycle/: 02-01-SUMMARY.md  02-02-SUMMARY.md
.planning/phases/03-pm-table-clocks-voltages/: 03-01-SUMMARY.md  03-02-SUMMARY.md  deferred-items.md
.planning/phases/04-spd-timings-memory-ui/: 04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-history-database-integrity/: 05-01-SUMMARY.md  05-02-SUMMARY.md  deferred-items.md
.planning/phases/06-ui-data-consistency/: 06-01-SUMMARY.md  06-02-SUMMARY.md
.superpowers/plans/: 2026-03-30-multi-mode-pipeline-plan.md
.superpowers/specs/: 2026-03-30-multi-mode-pipeline-design.md
assets/: corecycler.desktop  corecyclerlx.desktop  linux-corecycler.desktop
docs/superpowers/plans/: 2026-03-16-corecycler-v0.3.md  2026-03-16-corecyclerlx-v0.3.md
nix/: it87.nix  module.nix  ryzen-smu.nix  zenpower.nix
scripts/: update.sh
src/: main.py
src/config/: settings.py
src/engine/: detector.py  scheduler.py  topology.py
src/engine/backends/: __init__.py  base.py  mprime.py  stress_ng.py  stressapptest.py  ycruncher.py
src/gui/: config_tab.py  history_tab.py  main_window.py  memory_tab.py  monitor_tab.py  results_tab.py  smu_tab.py  tuner_tab.py
src/gui/widgets/: charts.py  core_grid.py
src/history/: __init__.py  context.py  db.py  export.py  logger.py
src/monitor/: cpu_usage.py  frequency.py  hwmon.py  memory.py  msr.py  power.py
src/smu/: commands.py  driver.py  pmtable.py
src/tuner/: __init__.py  config.py  engine.py  persistence.py  state.py
tests/: conftest.py  test_backends.py  test_detector.py  test_history_context.py  test_history_db.py  test_history_export.py  test_history_logger.py  test_memory_monitor.py  test_monitor.py  test_msr.py  test_pmtable.py  test_safety.py  test_scheduler.py  test_settings.py  test_smu_commands.py  test_smu_driver.py  test_stressapptest_backend.py  test_topology.py  test_tuner_config.py  test_tuner_engine.py  test_tuner_persistence.py  test_tuner_tab.py  test_ui_consistency.py
