[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "corecyclerlx"
version = "0.3.0"
description = "Per-core CPU stability tester and PBO Curve Optimizer tuner for AMD Ryzen on Linux"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [{ name = "Daaboulex" }]
dependencies = [
    "PySide6>=6.7",
]

[project.scripts]
corecyclerlx = "main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    # Production classes named Test* (TestProfile, TestState, TestRunLogger)
    # trigger PytestCollectionWarning on import — suppress them
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
